--- a/delivery-market-admin/src/main/resources/templates/category/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category/category-list.html
@@ -39,7 +39,7 @@
         </div>
         <div class="col-12">
             <div class="table-responsive small">
-                <table class="table table-striped table-sm text-center">
+                <table class="table table-hover table-sm text-center">
                     <thead>
                     <tr>
                         <th scope="col">
@@ -56,14 +56,12 @@
                     </thead>
                     <tbody>
                     <div th:each="category : ${categories}">
-                        <tr>
+                        <tr class="clickable-row" th:id="${category.id}">
                             <td>
                                 <input class="form-check-input" type="checkbox" th:id="'category-' + ${category.id}">
                             </td>
                             <td th:text="${category.id}"></td>
-                            <td>
-                                <a th:href="@{/categories/{categoryId}(categoryId=${category.id})}" th:text="${category.name}"></a>
-                            </td>
+                            <td th:text="${category.name}"></td>
                             <td></td>
                             <td th:text="${#temporals.format(category.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
                             <td th:text="${category.createdBy}"></td>
@@ -72,8 +70,8 @@
                             <td th:if="${category.createdAt == category.updatedAt}"></td>
                             <td th:if="${category.createdAt != category.updatedAt}" th:text="${category.updatedBy}"></td>
                         </tr>
-                        <div th:unless="${category.childCategories.isEmpty()}">
-                            <tr th:each="childCategory : ${category.childCategories}">
+                        <div th:unless="${category.childCategories.isEmpty()}" th:each="childCategory : ${category.childCategories}">
+                            <tr class="clickable-row" th:id="${category.id}">
                                 <td>
                                     <input class="form-check-input" type="checkbox" th:id="'category-' + ${childCategory.id}">
                                 </td>
