--- a/delivery-market/src/main/resources/templates/fragments/navbars.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbars.html
@@ -15,8 +15,7 @@
             </div>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link link-body-emphasis px-4">Features</a></li>
-                <li><a href="#" class="nav-link link-body-emphasis px-4">Pricing</a></li>
+                <li><a href="#" class="nav-link link-body-emphasis px-4">ㅅkdvn</a></li>
                 <li><a href="#" class="nav-link link-body-emphasis px-4">FAQs</a></li>
                 <li><a href="#" class="nav-link link-body-emphasis px-4">About</a></li>
             </ul>
