--- a/delivery-market/src/main/resources/templates/member/my-page/modify-info.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/modify-info.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{/fragments/navbars :: navbars}"></div>
 <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
-<div class="my-page-content-area">
+<div class="left-margin-content-area">
     <div class="row">
         <div class="col-4 offset-4">
             <h4 class="mb-3 text-center">Delivery Market 개인정보 수정</h4>
