--- a/delivery-market/src/main/resources/static/css/basic.css
+++ b/delivery-market/src/main/resources/static/css/basic.css
@@ -79,7 +79,7 @@
     margin-right: 20px;
 }
 
-.my-page-content-area {
+.left-margin-content-area {
     margin: 90px 20px 20px 280px;
     padding: 20px 10px 10px;
 }
