feat: 카테고리별 조회 페이징 처리 완료 - ResponseEntity사용
다른 api 코드도 ResponseEntity로 변경이 필요하다.

--- a/delivery-market/src/main/resources/templates/good/category.html
+++ b/delivery-market/src/main/resources/templates/good/category.html
@@ -28,17 +28,17 @@
             <ul class="pagination justify-content-center">
                 <li class="page-item">
                     <a class="page-link" th:text="'previous'"
-                       th:href="@{/goods(page=${page.number - 1})}"
+                       th:href="@{/categories/{categoryId}/(page=${page.number - 1}, categoryId=${categoryId})}"
                        th:class="'page-link' + (${page.number} <= 0 ? ' disabled' : '')"></a>
                 </li>
                 <li class="page-item" th:class="page-item" th:each="pageNumber : ${pages}">
                     <a th:class="'page-link' + (${pageNumber} == ${page.number} ? ' disabled' : '')"
                        th:text="${pageNumber + 1}"
-                       th:href="@{/goods(page=${pageNumber})}"></a>
+                       th:href="@{/categories/{categoryId}/(page=${pageNumber}, categoryId=${categoryId})}"></a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" th:text="'next'"
-                       th:href="@{/goods(page=${page.number + 1})}"
+                       th:href="@{/categories/{categoryId}/(page=${page.number + 1}, categoryId=${categoryId})}"
                        th:class="'page-link' + (${page.number} >= ${page.totalPages - 1} ? ' disabled' : '')"></a>
                 </li>
 
