feat: 관리자, 사용자 서버 통신 api ResponseEntity로 변경

--- a/delivery-market/src/main/resources/templates/fragments/navbars.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbars.html
@@ -27,7 +27,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#" class="nav-link link-body-emphasis px-4">ㅅkdvn</a></li>
+                <li><a href="/goods" class="nav-link link-body-emphasis px-4">전체 상품</a></li>
                 <li><a href="#" class="nav-link link-body-emphasis px-4">FAQs</a></li>
                 <li><a href="#" class="nav-link link-body-emphasis px-4">About</a></li>
             </ul>
