feat: category admin ResponseEntity로 변경

--- a/delivery-market-admin/src/main/resources/templates/category/category-edit.html
+++ b/delivery-market-admin/src/main/resources/templates/category/category-edit.html
@@ -47,6 +47,7 @@
             </form>
             <div class="d-flex justify-content-center mt-5">
                 <button type="button" class="btn btn-outline-success" id="edit-category-btn">저장</button>
+                <button th:id="delete-all-category" type="button" class="btn btn-outline-danger w-100">전체 삭제</button>
                 <a type="button" class="btn btn-outline-secondary ms-3" href="/categories">취소</a>
             </div>
 
