--- a/delivery-market-admin/src/main/resources/templates/category/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category/category-list.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-2 mb-3 offset-10">
             <div class="row">
-                <div class="col-6 p-1">
+                <div class="col-6 offset-6 p-1">
                     <a type="button" class="btn btn-outline-success btn-sm w-100" href="/categories/add">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
@@ -24,15 +24,6 @@
                         </svg>
                         추가
                     </a>
-                </div>
-                <div class="col-6 p-1">
-                    <button type="button" class="btn btn-outline-danger btn-sm w-100" onclick="delCategory()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-square" viewBox="0 0 16 16">
-                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                            <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8"/>
-                        </svg>
-                        삭제
-                    </button>
                 </div>
             </div>
 
@@ -42,10 +33,7 @@
                 <table class="table table-hover table-sm text-center">
                     <thead>
                     <tr>
-                        <th scope="col">
-                            <input class="form-check-input" type="checkbox" id="all">
-                        </th>
-                        <th scope="col">No</th>
+                        <th scope="col">No.</th>
                         <th scope="col">상위 카테고리</th>
                         <th scope="col">하위 카테고리</th>
                         <th scope="col">생성일자</th>
@@ -57,9 +45,6 @@
                     <tbody>
                     <div th:each="category : ${categories}">
                         <tr class="clickable-row" th:id="${category.id}">
-                            <td>
-                                <input class="form-check-input" type="checkbox" th:id="'category-' + ${category.id}">
-                            </td>
                             <td th:text="${category.id}"></td>
                             <td th:text="${category.name}"></td>
                             <td></td>
@@ -72,9 +57,6 @@
                         </tr>
                         <div th:unless="${category.childCategories.isEmpty()}" th:each="childCategory : ${category.childCategories}">
                             <tr class="clickable-row" th:id="${category.id}">
-                                <td>
-                                    <input class="form-check-input" type="checkbox" th:id="'category-' + ${childCategory.id}">
-                                </td>
                                 <td th:text="${childCategory.id}"></td>
                                 <td></td>
                                 <td th:text="${childCategory.name}"></td>
