--- a/delivery-market-admin/src/main/resources/templates/good/good-edit.html
+++ b/delivery-market-admin/src/main/resources/templates/good/good-edit.html
@@ -126,37 +126,37 @@
                                 <div class="accordion-body">
                                     <div class="row py-4 px-3">
                                         <div class="col-12 pb-3">
-                                            <input type="hidden" id="detail-id" th:value="${good.goodsDetail.id}">
+                                            <input type="hidden" id="detail-id" th:value="${good.getGoodDetail.id}">
                                             <label for="origin" class="form-label">원산지</label>
-                                            <textarea id="origin" th:text="${good.goodsDetail.origin}" name="goodsDetail.origin" class="form-control" placeholder="ex) 한국, 축산물 이력번호가 표시된 제품이며, 이력번호는 수령하시는 상품 패키지에서 확인 가능합니다."></textarea>
+                                            <textarea id="origin" th:text="${good.getGoodDetail.origin}" name="goodsDetail.origin" class="form-control" placeholder="ex) 한국, 축산물 이력번호가 표시된 제품이며, 이력번호는 수령하시는 상품 패키지에서 확인 가능합니다."></textarea>
                                         </div>
                                         <div class="col-12 pb-3">
                                             <label for="allergyInfo" class="form-label">알레르기</label>
-                                            <textarea id="allergyInfo" th:text="${good.goodsDetail.allergyInfo}" name="goodsDetail.allergyInfo" class="form-control" placeholder="ex) 소고기, 대두, 밀, 우유 함유"></textarea>
+                                            <textarea id="allergyInfo" th:text="${good.getGoodDetail.allergyInfo}" name="goodsDetail.allergyInfo" class="form-control" placeholder="ex) 소고기, 대두, 밀, 우유 함유"></textarea>
                                         </div>
                                         <div class="col-12 pb-3">
                                             <label for="guidelines" class="form-label">안내사항</label>
-                                            <textarea id="guidelines" th:text="${good.goodsDetail.guidelines}" name="goodsDetail.guidelines" class="form-control" placeholder="ex) 뼈 조각이 있을 수 있으니 섭취 시 주의부탁드립니다."></textarea>
+                                            <textarea id="guidelines" th:text="${good.getGoodDetail.guidelines}" name="goodsDetail.guidelines" class="form-control" placeholder="ex) 뼈 조각이 있을 수 있으니 섭취 시 주의부탁드립니다."></textarea>
                                         </div>
                                         <div class="col-12 pb-3">
                                             <label for="expiryDate" class="form-label">소비기한</label>
-                                            <textarea id="expiryDate" th:text="${good.goodsDetail.expiryDate}" name="goodsDetail.expiryDate" class="form-control" placeholder="ex) 수령일 포함 180일 이상 남은 제품을 보내드립니다. (총 소비기한 365일)"></textarea>
+                                            <textarea id="expiryDate" th:text="${good.getGoodDetail.expiryDate}" name="goodsDetail.expiryDate" class="form-control" placeholder="ex) 수령일 포함 180일 이상 남은 제품을 보내드립니다. (총 소비기한 365일)"></textarea>
                                         </div>
                                         <div class="col-6 pb-3">
                                             <label for="packagingType" class="form-label">포장 타입</label>
                                             <select id="packagingType" name="goodsDetail.packagingType" class="form-select">
                                                 <option value="">--포장 타입--</option>
                                                 <option th:each="packaging : ${packagingType}" th:value="${packaging.name}" th:text="${packaging.type}"
-                                                        th:selected="${good.goodsDetail.packagingType.name != packaging.name ? false : true}"></option>
+                                                        th:selected="${good.getGoodDetail.packagingType.name != packaging.name ? false : true}"></option>
                                             </select>
                                         </div>
                                         <div class="col-6 pb-3">
                                             <label for="weightVolume" class="form-label">중량/용량</label>
-                                            <input type="text" class="form-control" th:value="${good.goodsDetail.weightVolume}"  id="weightVolume" name="goodsDetail.weightVolume" placeholder="ex) 1040g / 옵션별 상이">
+                                            <input type="text" class="form-control" th:value="${good.getGoodDetail.weightVolume}" id="weightVolume" name="goodsDetail.weightVolume" placeholder="ex) 1040g / 옵션별 상이">
                                         </div>
                                         <div class="col-12 pb-3">
                                             <label for="summernote" class="form-label">상품 상세 설명</label>
-                                            <textarea id="summernote" th:text="${good.goodsDetail.description}"  name="goodsDetail.description"></textarea>
+                                            <textarea id="summernote" th:text="${good.getGoodDetail.description}" name="goodsDetail.description"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -171,7 +171,7 @@
                             <div id="goods-option-input-area" class="accordion-collapse collapse show">
                                 <div class="accordion-body py-3" id="option-fields">
                                     <a type="button" class="btn btn-outline-success btn-sm w-100" id="addOption">옵션 추가</a>
-                                    <div class="row py-4 px-3 option-field" th:each="option, iterStat: ${good.goodsOptions}">
+                                    <div class="row py-4 px-3 option-field" th:each="option, iterStat: ${good.getGoodOptions}">
                                         <div class="col-9 pb-3">
                                             <label for="option-name" class="form-label">이름</label>
                                             <input class="option-id" type="hidden" th:name="'goodsOptions[' + ${iterStat.index} + '].id'" th:value="${option.id}">
