--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -7,21 +7,113 @@
     <div class="row" style="margin-left: 200px; margin-right: 200px">
         <div class="col-5">
 <!--            <img th:src="|/api/goods/images/${good.photo}|" class="card-img-top" alt="..." height="551.992px" width="430px">-->
-            <img src="/img/test.jpeg" class="card-img-top" alt="..." height="551.992px" width="430px">
+            <img id="good-main-photo" class="card-img-top" alt="..." height="551.992px" width="430px">
         </div>
         <div class="col-7">
             <div class="row">
-                <div class="col-12 mb-0">
+                <div class="col-12 mb-0" id="good-name">
                     <h5>[KF365] 대추방울토마토 750g</h5>
                 </div>
-                <div class="col-12">
+                <div class="col-12" id="good-summary">
                     <p style="color: gray">믿고 먹을 수 있는 상품을 합리적인 가격에</p>
+                </div>
+                <div class="col-12 mb-0" id="good-discount-price">
+                    <h4 class="mb-0">
+                        <span style="color: rgb(250, 98, 47);">90%</span>
+                        <span>500원</span>
+                    </h4>
+                    <p class="text-decoration-line-through" style="color: gray">5000원</p>
+                </div>
+                <div class="col-12" id="good-price">
+                    <h4 class="mb">
+                        <span>500원</span>
+                    </h4>
+                </div>
+                <div class="col-12 border-bottom" id="good-detail-origin">
+                    <h5>원산지: 국산</h5>
+                </div>
+                <div class="col-12">
+                    <div class="row border-bottom" id="good-detail-packaging-type">
+                        <div class="col-3">
+                            <p class="my-2">포장타입</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2">냉장</p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-weight-volume">
+                        <div class="col-3">
+                            <p class="my-2">중량/용량</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2">750g 내외</p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-allergyInfo">
+                        <div class="col-3">
+                            <p class="my-2">알레르기 정보</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2">본 제품은 고등어, 게, 새우, 오징어, 쇠고기, 조개규(굴, 전복, 홍합을 포함)을 사용한 제품과 같은 제조시설에서 제조</p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-guidelines">
+                        <div class="col-3">
+                            <p class="my-2">안내사항</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2">식품 특성상 중량은 3% 내외의 차이가 발생할 수 있습니다. 또한 신선식품 특성상 원물마다 크기 및 형태가 일정하지 않을 수 있습니다.
+                                두 군데 이상의 산지 운영으로 패키지가 상이할 수 있습니다. 다만 중량은 모두 동일한 점 구매에 참고 부탁드립니다.</p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-expiry-date">
+                        <div class="col-3">
+                            <p class="my-2">소비기한(또는 유통기한)</p>
+                        </div>
+                        <div class="col-9">
+                            <p class="my-2">수령일 포함 최소 185일 남은 제품을 보내드립니다. (총 유통기한 365일) 수정</p>
+                        </div>
+                    </div>
+                    <div class="row border-bottom" id="good-detail-option-area">
+                        <div class="col-3">
+                            <label for="option" class="my-2">상품선택</label>
+                        </div>
+                        <div class="col-9 my-2">
+                            <select id="option" class="form-select" name="option">
+                                <option value="">--상품을 선택해주세요.--</option>
+                            </select>
+                        </div>
+                        <div class="col-9 offset-3 my-2" id="choice-options">
+                            <ul class="list-group">
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 border-bottom text-end my-2">
+                    <h5>
+                        <span>총 상품금액: </span>
+                        <span id="total-price">0</span>
+                        <span>원</span>
+                    </h5>
+                </div>
+                <div class="col-2">
+                    <a type="button" class="btn btn-danger w-100">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="col-5">
+                    <a type="button" class="w-100 btn btn-warning">구매하기</a>
+                </div>
+                <div class="col-5">
+                    <a type="button" class="w-100 btn btn-success">장바구니</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<script src="/js/good/good-list.js"></script>
+<script src="/js/good/good-detail.js"></script>
 </body>
 </html>
