--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -110,6 +110,8 @@
                 </div>
             </div>
         </div>
+        <div class="col-12" style="margin-top: 50px" id="good-detail-description">
+        </div>
     </div>
 </div>
 
