--- a/delivery-market/src/main/resources/templates/member/my-page/address-list.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/address-list.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script src="/js/address.js"></script>
+<script src="/js/member/address.js"></script>
 
 </body>
 </html>
