--- a/delivery-market/src/main/resources/templates/member/sign-up.html
+++ b/delivery-market/src/main/resources/templates/member/sign-up.html
@@ -106,7 +106,7 @@
     </div>
 </div>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script src="/js/member.js"></script>
+<script src="/js/member/member.js"></script>
 
 </body>
 </html>
