--- a/delivery-market/src/main/resources/templates/member/find-id.html
+++ b/delivery-market/src/main/resources/templates/member/find-id.html
@@ -44,6 +44,6 @@
         </div>
     </div>
 </div>
-<script src="/js/member.js"></script>
+<script src="/js/member/member.js"></script>
 </body>
 </html>
