feat: navbar 로딩 시 로그인 상태 체크 로직 수정 및 장바구니 카운트 체크 로직 추가

--- a/delivery-market/src/main/resources/templates/fragments/navbars.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbars.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div class="navbars-fixed-area" th:fragment="navbars">
     <div class="p-2 bg-body-tertiary border-bottom">
-
-
-
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
             <div class="col-md-3 mb-2">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
@@ -18,7 +15,7 @@
                 <li><a href="#" class="nav-link link-body-emphasis px-4">About</a></li>
             </ul>
 
-            <div sec:authorize="isAnonymous()" class="col-md-3 text-end">
+            <div id="logout-status-area" class="col-md-3 text-end">
                 <ul class="nav">
                     <li class="nav-item"><a href="/login" class="nav-link link-body-emphasis px-2">로그인</a></li>
                     <li class="nav-item"><a href="/sign-up" class="nav-link link-body-emphasis px-2">회원가입</a></li>
@@ -27,11 +24,18 @@
                 </ul>
             </div>
 
-            <div sec:authorize="isAuthenticated()" class="col-md-3 text-end">
+            <div id="login-status-area" class="col-md-3 text-end">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link link-body-emphasis px-2" href="/my-page"
-                           th:text="${#authentication.principal.username} + 님"></a>
+                        <a class="nav-link link-body-emphasis px-2 cart-icon" href="/my-page/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                            </svg>
+                            <span class="cart-badge"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-body-emphasis px-2" id="login-user-name" href="/my-page"></a>
                     </li>
                     <li class="nav-item">
                         <a href="/logout" class="nav-link link-body-emphasis px-2">로그아웃</a>
@@ -39,7 +43,7 @@
                 </ul>
             </div>
         </header>
-
+<script src="/js/navbar.js"></script>
     </div>
 </div>
 </html>
