feat: navbar layout 수정

--- a/delivery-market/src/main/resources/templates/fragments/navbars.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbars.html
@@ -3,9 +3,9 @@
 <div class="navbars-fixed-area" th:fragment="navbars">
     <div class="p-2 bg-body-tertiary border-bottom">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-            <div class="col-md-3 mb-2">
+            <div class="col-md-3">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                    <img width="auto" height="50" src="/img/clean-logo-and-company.png">
+                    <img width="auto" height="40" src="/img/clean-logo-and-company.png">
                 </a>
             </div>
 
