--- a/delivery-market/src/main/resources/templates/good/good-detail.html
+++ b/delivery-market/src/main/resources/templates/good/good-detail.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 <div class="content-area" style="margin-top: 100px">
     <div class="row" style="margin-left: 200px; margin-right: 200px">
         <div class="col-5">
