--- a/delivery-market/src/main/resources/templates/member/find-id.html
+++ b/delivery-market/src/main/resources/templates/member/find-id.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 
 <div class="content-area">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
