--- a/delivery-market/src/main/resources/templates/member/my-page/modify-info.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/modify-info.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
 <div class="left-margin-content-area">
     <div class="row">
