--- a/delivery-market/src/main/resources/templates/fragments/navbar.html
+++ b/delivery-market/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<div class="navbars-fixed-area" th:fragment="navbars">
+<div class="navbar-fixed-area" th:fragment="navbar">
     <div class="p-2 bg-body-tertiary border-bottom">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
             <div class="col-md-3">
@@ -27,7 +27,7 @@
             <div id="login-status-area" class="col-md-3 text-end">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link link-body-emphasis px-2 cart-icon" href="/my-page/">
+                        <a class="nav-link link-body-emphasis px-2 cart-icon" href="/my-page/cart/list">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                             </svg>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-body-emphasis px-2" id="login-user-name" href="/my-page"></a>
+                        <a class="nav-link link-body-emphasis px-2" id="login-user-name" href="/my-page/"></a>
                     </li>
                     <li class="nav-item">
                         <a href="/logout" class="nav-link link-body-emphasis px-2">로그아웃</a>
