--- a/delivery-market/src/main/resources/templates/good/good.html
+++ b/delivery-market/src/main/resources/templates/good/good.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 <div th:replace="~{/fragments/good-sidebar :: sidebar}"></div>
 <div class="left-margin-content-area">
     <div class="row row-cols-1 row-cols-md-4 g-4" id="good-list">
