--- a/delivery-market/src/main/resources/templates/main.html
+++ b/delivery-market/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 
 <div class="content-area">
     main<br>
