--- a/delivery-market/src/main/resources/templates/member/my-page/address-list.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/address-list.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
 <body>
-<div th:replace="~{/fragments/navbars :: navbars}"></div>
+<div th:replace="~{/fragments/navbar :: navbar}"></div>
 <div th:replace="~{/fragments/modal/add-address-modal :: modal}"></div>
 <div th:replace="~{/fragments/modal/edit-address-modal :: modal}"></div>
 <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
