feat: 장바구니 리스트 레이아웃 기본 구성 완료

--- a/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
+++ b/delivery-market/src/main/resources/templates/member/my-page/cart-list.html
@@ -46,8 +46,8 @@
                                         <input class="form-check-input" type="checkbox" value="">
                                         <img class="good-photo" style="width: 67px; height: 87px; cursor: pointer">
                                     </div>
-                                    <div class="col-4">
-                                        <span>당도선별 성주 참외 1.5kg</span>
+                                    <div class="col-4 text-wrap">
+                                        <span>당도선별 성주 참외 1.5kg당도선별 성주 참외 1.5kg당도선별 성주 참외 1.5kg당도선별 성주 참외 1.5kg</span>
                                     </div>
                                     <div class="col-3">
                                         <div class="btn-group me-2 ms-0" role="group" aria-label="First group">
@@ -57,12 +57,12 @@
                                         </div>
                                     </div>
                                     <div class="col-2">
-                                        <div class="vstack">
+                                        <div class="vstack text-end">
                                             <div>
-                                                <span class="good-discount-price">500원</span>
+                                                <p class="mb-0 good-discount-price">500원</p>
                                             </div>
                                             <div>
-                                                <span class="text-decoration-line-through good-original-price" style="color: gray">1,000원</span>
+                                                <p class="text-decoration-line-through good-original-price" style="color: gray">1,000원</p>
                                             </div>
                                         </div>
                                     </div>
